--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
                     }
                     </script>
                 </div>
+                <hr>
                 <div class="col-lg-7">
                     <h3 class="mb-4">Slime-Handed</h3>
                     <p>
@@ -232,7 +233,87 @@
             <hr>
             <div class="row align-items-center">
                 <div class="col-lg-5 pb-4 pb-lg-0">
-                    <img class="img-fluid rounded w-100" src="img/nova_title.png" alt="">
+                    <!DOCTYPE html>
+                    <html>
+                    <head>
+                    <style>
+                        .slideshow-container {
+                        max-width: 800px;
+                        height: 400px; /* Set a fixed height for the container */
+                        position: relative;
+                        margin: auto;
+                        overflow: hidden; /* Hide overflowing images */
+                        }
+                        
+                        .mySlides {
+                        display: none;
+                        }
+                        
+                        .slide-img {
+                        width: 100%;
+                        height: 100%; /* Set the height to 100% to fill the container */
+                        object-fit: cover; /* Maintain image aspect ratio while covering the container */
+                        }
+
+                        .slideshow-controls {
+                        text-align: center;
+                        margin-top: 10px;
+                        }
+
+                        .slideshow-button {
+                        padding: 5px 10px;
+                        font-size: 16px;
+                        cursor: pointer;
+                        }
+                    </style>
+                    </head>
+                    <body>
+
+                    <div class="slideshow-container">
+                    <div class="mySlides">
+                        <img class="slide-img" src="img/nova_title.png" alt="">
+                    </div>
+
+                    <div class="mySlides">
+                        <img class="slide-img" src="img/nova2.png" alt="">
+                    </div>
+
+                    <div class="mySlides">
+                        <img class="slide-img" src="img/nova3.png" alt="">
+                    </div>
+                    </div>
+
+                    <div class="slideshow-controls">
+                    <button class="slideshow-button" onclick="plusSlides(-1)">Previous</button>
+                    <button class="slideshow-button" onclick="plusSlides(1)">Next</button>
+                    </div>
+
+                    <script>
+                    let slideIndex1 = 1;
+                    showSlides(slideIndex1);
+
+                    function plusSlides(n) {
+                        showSlides(slideIndex1 += n);
+                    }
+
+                    function showSlides(n) {
+                        let i;
+                        const slides = document.getElementsByClassName("mySlides");
+
+                        if (n > slides.length) {
+                        slideIndex1 = 1;
+                        }
+                        if (n < 1) {
+                        slideIndex1 = slides.length;
+                        }
+
+                        for (i = 0; i < slides.length; i++) {
+                        slides[i].style.display = "none";
+                        }
+
+                        slides[slideIndex1 - 1].style.display = "block";
+                    }
+                    </script>
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">Project Nova: Cellosseum</h3>
